# create-solana-dapp

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  csd.sh  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  project.json  samplefile.txt  test2.txt  tsconfig.base.json  tsconfig.json  verify-package-versions.ts  vitest.config.ts
.changeset/: add-cli-version-check.md  beige-cheetahs-dance.md  config.json  curvy-grapes-do.md  fast-trainers-stare.md  forty-files-relate.md  lovely-pets-wink.md  metal-cooks-hang.md  shiny-apples-repeat.md  six-clouds-try.md  sixty-roses-learn.md  smooth-goats-leave.md  spotty-planes-boil.md  twenty-cycles-attend.md  update-e2e-test-trigger.md  warm-toys-check.md
.github/: publish-canary-releases.yml
.husky/: pre-commit  pre-push
.verdaccio/: config.yml
src/: createSolanaDapp.ts  index.ts
templates/: NOTES.md  README.md
templates/anchor/programs/some-program-name/: Cargo.toml
templates/anchor/programs/some-program-name/src/: lib.rs
test/: check-cli-version.test.ts  fetch-npm-version.test.ts  final-note.test.ts  get-package-json-path.test.ts  get-package-json.test.ts  get-start-script.test.ts  get-version-commands.test.ts  get-version-urls.test.ts  get-version.test.ts  index.test.ts  init-script-delete.test.ts  init-script-instructions.test.ts  init-script-rename.test.ts  init-script-version-adb.test.ts  init-script-version-anchor.test.ts  init-script-version-check.test.ts  init-script-version-solana.test.ts  init-script-version.test.ts  (+3 more)
(+123 files in other folders)
